--- a/style.css
+++ b/style.css
@@ -1,2 +1,25 @@
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+:root {
+  --primary-font: "Barlow", sans-serif;
+  --secondary-font: "Fraunces", serif;
+  --soft-red: hsl(7, 99%, 70%);
+  --yellow: hsl(51, 100%, 49%);
+  --dark-cyan: hsl(167, 40%, 24%);
+  --dark-blue: hsl(198, 62%, 26%);
+  --cyan: hsl(168, 34%, 41%);
+  --dark-blue: hsl(212, 27%, 19%);
+  --very-dark-gray: hsl(213, 9%, 39%);
+  --dark-gray: hsl(232, 10%, 55%);
+  --gray: hsl(210, 4%, 67%);
+  --white: hsl(0, 0%, 100%);
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
+}
+.body {
+  font-family: var(--primary-font);
+}
