--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@
 }
 p {
   font-family: var(--primary-font);
+  color: var(--dark-gray);
+  text-align: center;
 }
 h1,
 h2,
@@ -59,6 +61,7 @@ img {
 .container > * {
   grid-column: 1/-1;
 }
+/*header styling */
 .header {
   grid-column: 1/-1;
   color: var(--white);
@@ -100,4 +103,45 @@ img {
 .button__scrol-down img {
   width: 40px;
   height: auto;
+}
+/*article styling */
+.article {
+  padding: 9vw 6vw 14vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.article__title {
+  font-size: 2rem;
+}
+.article__text {
+  font-size: 1.2rem;
+  line-height: 1.9rem;
+  padding: 0 2vw 6vw;
+  margin: 0;
+}
+.btn__learn-more {
+  font-family: var(--secondary-font);
+  text-transform: uppercase;
+  padding: 1vw 2vw;
+  position: relative;
+  margin: 1vw;
+}
+.btn__learn-more::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 10%;
+  left: 0;
+  width: 100%;
+  height: 30%;
+  border-radius: 5px;
+  opacity: 0.3;
+  z-index: -1;
+}
+.btn__learn-more--orange::after {
+  background-color: var(--yellow);
+}
+.btn__learn-more--pink::after {
+  background-color: var(--soft-red);
 }
