--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ img {
 .btn__learn-more {
   font-family: var(--secondary-font);
   text-transform: uppercase;
-  padding: 1vw 2vw;
+  padding: 2vw;
   position: relative;
   margin: 1vw;
 }
@@ -144,4 +144,25 @@ img {
 }
 .btn__learn-more--pink::after {
   background-color: var(--soft-red);
+}
+.article-background {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 97vw 5vw 10vw;
+  background-size: cover;
+}
+.article-background__title {
+  font-size: 1.8rem;
+  line-height: 100%;
+  margin-bottom: 1rem;
+}
+.article-background__text {
+  line-height: 1.8rem;
+}
+.article--photography {
+  background-image: url("../images/mobile/image-photography.jpg");
+}
+.article--design {
+  background-image: url("../images/mobile/image-graphic-design.jpg");
 }
