--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
   --blue: hsl(202, 99%, 66%);
   --dark-cyan: hsl(167, 40%, 24%);
   --dark-blue: hsl(198, 62%, 26%);
-  --cyan: hsl(168, 34%, 41%);
+  --cyan2: hsl(168, 34%, 41%);
+  --cyan: hsl(167, 44%, 70%);
   --dark-blue: hsl(212, 27%, 19%);
   --very-dark-gray: hsl(213, 9%, 39%);
   --dark-gray: hsl(232, 10%, 55%);
@@ -198,4 +199,37 @@ img {
 .galery-img {
   grid-column: span 1;
   line-height: 0;
+}
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--cyan);
+  padding: 15vw 4vw 10vw;
+}
+
+.footer__logo {
+  width: 50%;
+}
+.footer__nav {
+  width: 100%;
+}
+.footer__nav .nav {
+  padding: 6vw 0;
+  justify-content: space-around;
+}
+.footer__nav a {
+  font-family: var(--primary-font);
+  font-size: 1.1rem;
+  color: var(--dark-cyan);
+}
+
+.footer__social {
+  padding: 9vw 0vw 4vw;
+  width: 55%;
+  justify-content: center;
+}
+
+.footer__social li {
+  margin: auto;
 }
