--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ img {
   background-position: center bottom;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 0vw 6.3vw;
+  padding: 0 5%;
 }
 .nav {
   display: flex;
@@ -75,15 +75,18 @@ img {
   display: flex;
 }
 .navbar {
-  padding: 7.7vw 0;
+  padding: 9.5% 0;
   align-items: center;
   justify-content: space-between;
+}
+.navbar__logo {
+  margin-left: 3%;
 }
 .header__hero {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  padding: 8vw 4vw 33vw 4vw;
+  padding: 8% 4% 37% 4%;
 }
 .header__text {
   text-transform: uppercase;
@@ -91,7 +94,7 @@ img {
   font-size: 2.5rem;
   line-height: 1.2;
   letter-spacing: 0.4rem;
-  padding-bottom: 6vw;
+  padding-bottom: 7%;
 }
 
 .button__scrol-down img {
@@ -100,7 +103,7 @@ img {
 }
 /*article styling */
 .article {
-  padding: 9vw 6vw 14vw;
+  padding: 10% 6% 14%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -112,15 +115,15 @@ img {
 .article__text {
   font-size: 1.2rem;
   line-height: 1.9rem;
-  padding: 0 2vw 6vw;
+  padding: 0 2% 7%;
   margin: 0;
 }
 .btn__learn-more {
   font-family: var(--secondary-font);
   text-transform: uppercase;
-  padding: 2vw;
+  padding: 3%;
   position: relative;
-  margin: 1vw;
+  margin: 1%;
   color: var(--very-dark-blue);
 }
 .btn__learn-more::after {
@@ -145,7 +148,7 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 97vw 5vw 10vw;
+  padding: 100% 5% 11%;
   background-size: cover;
 }
 .article-background__title {
@@ -155,6 +158,7 @@ img {
 }
 .article-background__text {
   line-height: 1.8rem;
+  margin: 4.5% 0%;
 }
 .article-background__text--green,
 .article-background__title--green {
@@ -171,20 +175,20 @@ img {
   background-image: url("../images/mobile/image-graphic-design.jpg");
 }
 .testimonials {
-  padding: 12vw 6.5vw 19vw;
+  padding: 14% 7% 18%;
 }
 .testimonials__header {
   text-transform: uppercase;
   font-size: 1.1rem;
   letter-spacing: 0.2rem;
-  padding-bottom: 1vw;
+  padding-bottom: 1%;
   color: var(--gray);
 }
 .testimonial-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 11vw 0vw 2vw;
+  padding: 14% 0 2%;
 }
 .testimonial-card__img {
   border-radius: 50%;
@@ -213,7 +217,7 @@ img {
   flex-direction: column;
   align-items: center;
   background-color: var(--cyan);
-  padding: 15vw 4vw 10vw;
+  padding: 17% 3% 10%;
 }
 
 .footer__logo {
@@ -223,7 +227,7 @@ img {
   width: 100%;
 }
 .footer__nav .nav {
-  padding: 6vw 0;
+  padding: 7% 0%;
   justify-content: space-around;
 }
 .footer__nav a {
@@ -233,7 +237,7 @@ img {
 }
 
 .footer__social {
-  padding: 9vw 0vw 4vw;
+  padding: 10% 0 4%;
   width: 55%;
   justify-content: center;
 }
