--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ picture {
   background-position: center bottom;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 0 5%;
+  padding: 0 1.2rem;
 }
 .nav {
   display: flex;
@@ -114,18 +114,18 @@ picture {
   border-radius: 30px;
 }
 .navbar {
-  padding: 2rem 0;
+  margin: 2rem 0;
   align-items: center;
   justify-content: space-between;
 }
 .navbar__logo {
-  margin-left: 3%;
+  margin-left: 0.2rem;
 }
 .header__hero {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  padding: 8% 4% 37% 4%;
+  margin: 2rem 0.5rem 8rem;
 }
 .header__text {
   text-transform: uppercase;
@@ -133,16 +133,16 @@ picture {
   font-size: 2.5rem;
   line-height: 1.2;
   letter-spacing: 0.4rem;
-  padding-bottom: 7%;
+  margin: 3.2rem 0;
 }
 
 .button__scrol-down img {
-  width: 40px;
+  width: 2.5rem;
   height: auto;
 }
 /*article styling */
 .article {
-  padding: 10% 6% 14%;
+  padding: 2.5rem 1.5rem 3.3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -154,18 +154,18 @@ picture {
 .article__text {
   font-size: 1.2rem;
   line-height: 1.9rem;
-  padding: 0 2% 7%;
-  margin: 0;
+  margin: 0 0.5rem 1.2rem;
 }
 .article-img {
   line-height: 0;
 }
 .btn__learn-more {
   font-family: var(--secondary-font);
+  font-size: 1rem;
   text-transform: uppercase;
-  padding: 3%;
+  padding: 0.5rem;
   position: relative;
-  margin: 1%;
+  margin: 0.5rem;
   color: var(--very-dark-blue);
 }
 .btn__learn-more::after {
@@ -175,8 +175,8 @@ picture {
   bottom: 10%;
   left: 0;
   width: 100%;
-  height: 30%;
-  border-radius: 5px;
+  height: 0.5rem;
+  border-radius: 0.5rem;
   opacity: 0.3;
   z-index: -1;
 }
@@ -187,20 +187,22 @@ picture {
   background-color: var(--soft-red);
 }
 .article-background {
+  height: min(575px, 100vh);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 100% 5% 11%;
+  justify-content: flex-end;
+  padding: 0.75rem 0.3rem;
   background-size: cover;
 }
 .article-background__title {
   font-size: 1.8rem;
   line-height: 100%;
-  margin-bottom: 1rem;
+  margin: auto 1rem 1rem;
 }
 .article-background__text {
   line-height: 1.8rem;
-  margin: 4.5% 0%;
+  margin: 0.9rem 1rem 2.8rem;
 }
 .article-background__text--green,
 .article-background__title--green {
@@ -217,21 +219,21 @@ picture {
   background-image: url("../images/mobile/image-graphic-design.jpg");
 }
 .testimonials {
-  padding: 14% 7% 18%;
+  margin: 3.2rem 0.5rem 4.3rem;
   grid-column: 1/-1;
 }
 .testimonials__header {
   text-transform: uppercase;
   font-size: 1.1rem;
   letter-spacing: 0.2rem;
-  padding-bottom: 1%;
+  margin: 1rem 0 0.5rem;
   color: var(--gray);
 }
 .testimonial-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 14% 0 2%;
+  padding: 3.4rem 1.5rem 0rem;
 }
 .testimonial-card__img {
   border-radius: 50%;
@@ -261,17 +263,19 @@ picture {
   flex-direction: column;
   align-items: center;
   background-color: var(--cyan);
-  padding: 17% 3% 10%;
+  padding: 4.2rem 1rem 2.5rem;
 }
 
 .footer__logo {
-  width: 50%;
+  width: 10.5rem;
 }
+
 .footer__nav {
   width: 100%;
 }
 .footer__nav .nav {
-  padding: 7% 0%;
+  margin: 2.6rem 0;
+  padding: 0;
   justify-content: space-around;
 }
 .footer__nav a {
@@ -281,7 +285,7 @@ picture {
 }
 
 .footer__social {
-  padding: 10% 0 4%;
+  padding: 2.2rem 0 1rem;
   width: 55%;
   justify-content: center;
 }
