--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ picture {
 }
 .header-nav__link {
   display: block;
-  padding: 1.1rem 2rem;
+  padding: 1.1rem 1.8rem;
   font-family: var(--primary-font);
   color: var(--dark-gray);
   font-size: 1.2rem;
@@ -161,6 +161,7 @@ picture {
 }
 .btn__learn-more {
   font-family: var(--secondary-font);
+  font-weight: 900;
   font-size: 1rem;
   text-transform: uppercase;
   padding: 0.5rem;
@@ -226,14 +227,14 @@ picture {
   text-transform: uppercase;
   font-size: 1.1rem;
   letter-spacing: 0.2rem;
-  margin: 1rem 0 0.5rem;
+  margin: 1rem 0rem 4rem;
   color: var(--gray);
 }
 .testimonial-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 3.4rem 1.5rem 0rem;
+  margin: 3.3rem 1.2rem 0rem;
 }
 .testimonial-card__img {
   border-radius: 50%;
@@ -241,7 +242,7 @@ picture {
   height: auto;
 }
 .testimonial-card__text {
-  padding: 4vw 0 0vw;
+  margin: 2rem 0 1.2rem;
   font-size: 1.1rem;
   line-height: 1.9rem;
 }
@@ -300,4 +301,99 @@ picture {
 }
 .attribution a {
   color: var(--very-dark-blue);
+}
+@media only screen and (min-width: 750px) {
+  .container {
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+  }
+  .header {
+    height: min(800px, 100vh);
+    background-image: url("../images/desktop/image-header.jpg");
+  }
+  .navbar {
+    padding: 0.2rem 1rem;
+  }
+  .navbar__logo {
+    width: 11rem;
+  }
+  .header-nav {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+  }
+  .header-nav__link {
+    color: white;
+    font-size: 1.1rem;
+  }
+  .header-nav__link--yellow {
+    background-color: var(--white);
+    color: var(--very-dark-blue);
+    margin: 0;
+    font-size: 1rem;
+  }
+  .header__text {
+    font-size: 3.7rem;
+    line-height: 1.5;
+    margin: 3.7rem 0 5rem;
+  }
+  .btn--burger {
+    display: none;
+  }
+  .article-about {
+    grid-column: 1/3;
+    grid-row: 2/3;
+  }
+  .article-about-img {
+    grid-column: 3/5;
+  }
+  .article {
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 9.8rem;
+    padding-right: 6rem;
+    padding-top: 4rem;
+  }
+  .article__title {
+    font-size: 2.6rem;
+    font-weight: 900;
+    text-align: left;
+    margin: 1rem 0;
+  }
+  .article__text {
+    text-align: left;
+    margin: 0.5rem 0;
+  }
+
+  .article-background__text {
+    width: 50%;
+  }
+  .article--photography {
+    background-image: url("../images/desktop/image-photography.jpg");
+  }
+  .article--design {
+    background-image: url("../images/desktop/image-graphic-design.jpg");
+  }
+  .testimonials {
+    margin: 9rem auto 7rem;
+    width: 80%;
+  }
+  .testimonials__header {
+    font-size: 1.4rem;
+    margin: 1rem 0;
+  }
+  .testimonial__cards {
+    display: flex;
+    justify-content: center;
+    margin: 2rem 0;
+  }
+  .testimonial-card {
+    margin: 3rem 0.2rem 0rem;
+  }
+  .testimonial-card__text {
+    margin: 3.5rem 0;
+  }
 }
