--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ li {
 }
 img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 picture {
   line-height: 0;
@@ -312,14 +313,13 @@ picture {
     grid-template-rows: auto;
   }
   .header {
-    height: min(800px, 100vh);
     background-image: url("../images/desktop/image-header.jpg");
   }
   .navbar {
     padding: 0.2rem 1rem;
   }
-  .navbar__logo {
-    width: 11rem;
+  .btn--burger {
+    display: none;
   }
   .header-nav {
     margin: 0;
@@ -337,14 +337,6 @@ picture {
     margin: 0;
     font-size: 1rem;
   }
-  .header__text {
-    font-size: 3.7rem;
-    line-height: 1.5;
-    margin: 3.7rem 0 5rem;
-  }
-  .btn--burger {
-    display: none;
-  }
   .article-about {
     grid-column: 1/3;
     grid-row: 2/3;
@@ -352,6 +344,34 @@ picture {
   .article-about-img {
     grid-column: 3/5;
   }
+  .testimonials__header {
+    font-size: 1.4rem;
+    margin: 1rem 0;
+  }
+  .testimonial__cards {
+    display: flex;
+    justify-content: center;
+    margin: 2.2rem 0;
+  }
+
+  .testimonial-card__text {
+    margin: 3.5rem 0;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .navbar__logo {
+    width: 11rem;
+  }
+
+  .header {
+    height: min(800px, 100vh);
+  }
+  .header__text {
+    font-size: 3.7rem;
+    line-height: 1.5;
+    margin: 3.7rem 0 5rem;
+  }
+
   .article {
     justify-content: center;
     align-items: flex-start;
@@ -385,10 +405,6 @@ picture {
     margin: 9rem auto 7rem;
     width: 80%;
   }
-  .testimonials__header {
-    font-size: 1.4rem;
-    margin: 1rem 0;
-  }
   .testimonial__cards {
     display: flex;
     justify-content: center;
@@ -402,9 +418,5 @@ picture {
   }
   .footer {
     padding: 4.5rem 1rem 1rem;
-  }
-
-  .footer__nav {
-    width: 25%;
   }
 }
