add hover effects

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
   --dark-gray: hsl(232, 10%, 55%);
   --gray: hsl(210, 4%, 67%);
   --white: hsl(0, 0%, 100%);
+  --white-transparent: hsla(0, 0%, 100%, 0.5);
 }
 
 .body {
@@ -32,10 +33,12 @@ h3 {
 button {
   background: none;
   border: none;
+  transition: 0.3s;
 }
 
 a {
   text-decoration: none;
+  transition: 0.3s;
 }
 
 li {
@@ -104,7 +107,7 @@ picture {
   color: var(--dark-gray);
   font-size: 1.2rem;
 }
-.header-nav__link--yellow {
+.header-nav__link--highlighted {
   padding: 1.2rem 2rem;
   margin: 0.9rem;
   background-color: var(--yellow);
@@ -180,7 +183,11 @@ picture {
   height: 0.5rem;
   border-radius: 0.5rem;
   opacity: 0.3;
+  transition: 0.3s;
   z-index: -1;
+}
+.btn__learn-more:hover::after {
+  opacity: 1;
 }
 .btn__learn-more--orange::after {
   background-color: var(--yellow);
@@ -286,6 +293,9 @@ picture {
   font-size: 1.1rem;
   color: var(--dark-cyan);
 }
+.footer__nav a:hover {
+  color: var(--white);
+}
 
 .footer__social {
   padding: 2.2rem 0 1rem;
@@ -297,6 +307,9 @@ picture {
 .footer__social li {
   margin: auto;
 }
+.footer__social-logo:hover {
+  filter: brightness(10);
+}
 .attribution {
   font-size: 11px;
   text-align: center;
@@ -305,6 +318,10 @@ picture {
 .attribution a {
   color: var(--very-dark-blue);
 }
+.attribution a:hover {
+  color: var(--white);
+}
+
 @media only screen and (min-width: 768px) {
   .container {
     margin: 0 auto;
@@ -331,11 +348,18 @@ picture {
     color: white;
     font-size: 1.1rem;
   }
-  .header-nav__link--yellow {
+  .header-nav__link:hover {
+    color: var(--dark-blue);
+  }
+  .header-nav__link--highlighted {
     background-color: var(--white);
     color: var(--very-dark-blue);
     margin: 0;
     font-size: 1rem;
+  }
+  .header-nav__link--highlighted:hover {
+    background-color: var(--white-transparent);
+    color: var(--white);
   }
   .article-about {
     grid-column: 1/3;
@@ -411,7 +435,7 @@ picture {
     margin: 2.2rem 0;
   }
   .testimonial-card {
-    margin: 3rem 0.2rem 0rem;
+    margin-top: 3rem;
   }
   .testimonial-card__text {
     margin: 3.5rem 0;
