--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ picture {
   flex-flow: column nowrap;
   align-items: center;
   background-color: white;
+  animation: show 0.3s;
 }
 /*menu triangle */
 .header-nav.active::before {
@@ -107,6 +108,9 @@ picture {
   color: var(--dark-gray);
   font-size: 1.2rem;
 }
+.header-nav__link:hover {
+  color: var(--dark-blue);
+}
 .header-nav__link--highlighted {
   padding: 1.2rem 2rem;
   margin: 0.9rem;
@@ -116,6 +120,9 @@ picture {
   text-transform: uppercase;
   font-size: 1rem;
   border-radius: 30px;
+}
+.header-nav__link--highlighted:hover {
+  color: var(--white);
 }
 .navbar {
   margin: 2rem 0;
@@ -348,9 +355,6 @@ picture {
     color: white;
     font-size: 1.1rem;
   }
-  .header-nav__link:hover {
-    color: var(--dark-blue);
-  }
   .header-nav__link--highlighted {
     background-color: var(--white);
     color: var(--very-dark-blue);
@@ -442,5 +446,17 @@ picture {
   }
   .footer {
     padding: 4.5rem 1rem 1rem;
+  }
+}
+
+/*animacje */
+@keyframes show {
+  0% {
+    opacity: 0;
+    transform: scaleY(0.1);
+  }
+  100% {
+    opacity: 1;
+    transform: scaleY(1);
   }
 }
