--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ picture {
   right: 1.6rem;
   margin: 0rem;
   padding: 1.6rem;
+  z-index: 2;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
